--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "nextjs-toploader": "^1.6.12",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.5.0",
