--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@prisma/client": "^5.16.2",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
