--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-
-# Connect to Supabase via connection pooling with Supavisor.
-DATABASE_URL=""
-
-# Direct connection to the database. Used for migrations.
-DIRECT_URL=""
+DATABASE_URL=
+DIRECT_URL=
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/login
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/join
