--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.4",
+    "@clerk/themes": "^2.1.12",
     "@consumet/extensions": "^1.6.0",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@prisma/client": "^5.16.2",
