--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,4 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/login
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/join
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
-CLERK_WEBHOOK_SECRET=whsec_RIBl9D0h8iJd1mqgLbN1fq5ZnCL8QgWw
+CLERK_WEBHOOK_SECRET=
