--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@vidstack/react": "^1.11.30",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "hls.js": "^1.5.13",
     "keen-slider": "^6.8.6",
     "lodash": "^4.17.21",
     "lucide-react": "^0.414.0",
+    "media-icons": "^1.1.5",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
