--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "sonner": "^1.5.0",
     "svix": "^1.25.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/lodash": "^4.17.6",
     "@types/node": "^20",
     "@types/react": "^18",
