chore(auth): clerk is back?

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
-CONSUMET_URL=https://consumet-api-dev.vercel.app
-# DATABASE_URL=
+# DATA APIs
+NEXT_PUBLIC_ANILIST_API=https://graphql.anilist.co
+NEXT_PUBLIC_CONSUMET_URL=
+
+# Supabase Database
+DATABASE_URL=
+DIRECT_URL=
+
+# Supabase Auth
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
