--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "https": "next dev --experimental-https"
+    "https": "next dev --experimental-https",
+    "generate": "graphql-codegen"
   },
   "dependencies": {
     "@apollo/client": "^3.11.1",
     "@clerk/nextjs": "^5.2.4",
     "@clerk/themes": "^2.1.12",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/typescript": "^4.0.9",
+    "@graphql-codegen/typescript-operations": "^4.2.3",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.0",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@prisma/client": "^5.16.2",
     "@radix-ui/react-avatar": "^1.1.0",
