--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "sanitize-html": "^2.13.0",
     "sonner": "^1.5.0",
     "svix": "^1.25.0",
     "tailwind-merge": "^2.4.0",
