--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,10 @@
 NEXT_PUBLIC_ANILIST_API=https://graphql.anilist.co
 NEXT_PUBLIC_CONSUMET_URL=
 
-# Supabase Database
-DATABASE_URL=
+# PostgreSQL Database
+POSTGRES_PRISMA_URL=
+POSTGRES_URL_NON_POOLING=
 
-# Supabase Auth
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
+# Clerk Authentication
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
