--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "sanitize-html": "^2.13.0",
     "sonner": "^1.5.0",
     "svix": "^1.25.0",
     "tailwind-merge": "^2.4.0",
@@ -55,6 +56,7 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sanitize-html": "^2.11.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
