--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@vidstack/react": "^1.12.3",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
-    "keen-slider": "^6.8.6",
+    "hls.js": "^1.5.14",
     "lodash": "^4.17.21",
     "lucide-react": "^0.417.0",
     "next": "14.2.5",
-    "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
     "query-string": "^9.0.0",
     "react": "^18",
