--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "hls.js": "^1.5.14",
     "lodash": "^4.17.21",
     "lucide-react": "^0.417.0",
+    "media-icons": "^1.1.5",
     "next": "14.2.5",
     "nextjs-toploader": "^1.6.12",
     "query-string": "^9.0.0",
