--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@apollo/client": "^3.11.1",
     "@clerk/nextjs": "^5.2.4",
     "@clerk/themes": "^2.1.17",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/typescript": "^4.0.9",
     "@graphql-codegen/typescript-operations": "^4.2.3",
@@ -35,6 +37,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "emoji-mart": "^5.6.0",
     "graphql": "^16.9.0",
     "hls.js": "^1.5.14",
     "lodash": "^4.17.21",
@@ -45,6 +48,7 @@
     "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.13.0",
     "react-markdown": "^9.0.1",
     "sanitize-html": "^2.13.0",
     "sonner": "^1.5.0",
