chore: added service workers for push notifications

--- a/package.json
+++ b/package.json
@@ -57,15 +57,18 @@
     "sonner": "^1.5.0",
     "svix": "^1.25.0",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
     "@types/lodash": "^4.17.6",
     "@types/node": "^22",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/sanitize-html": "^2.11.0",
+    "@types/web-push": "^3.6.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
