--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ POSTGRES_URL_NON_POOLING=
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 CLERK_WEBHOOK_SECRET=
+
+# Push Notifications
+NEXT_PUBLIC_VAPID_KEY=
+PRIVATE_VAPID_KEY=
